test/parse/bad-toplevel.txt
;;; ERROR: 1
(foo bar)
(;; STDERR ;;;
out/test/parse/bad-toplevel.txt:2:1: error: unexpected token "(", expected a module field or a command.
(foo bar)
^
;;; STDERR ;;)
